@@ -10,6 +10,10 @@ What's New in Python 3.6.0 alpha 4
 Core and Builtins
 -----------------
 
+- Issue #26823: Large sections of repeated lines in tracebacks are now
+  abbreviated as "[Previous line repeated {count} more times]" by the builtin
+  traceback rendering. Patch by Emanuel Barry.
+
 - Issue #27574: Decreased an overhead of parsing keyword arguments in functions
   implemented with using Argument Clinic.
 
@@ -45,6 +49,11 @@ Core and Builtins
 
 Library
 -------
+
+- Issue #26823: traceback.StackSummary.format now abbreviates large sections of
+  repeated lines as "[Previous line repeated {count} more times]" (this change
+  then further affects other traceback display operations in the module). Patch
+  by Emanuel Barry.
 
 - Issue #27664: Add to concurrent.futures.thread.ThreadPoolExecutor()
   the ability to specify a thread name prefix.
